        default value from 1200 to 1400.
    - system/state:
      - [API break] 'getInstalledInfo': returns raw pointer.
    - system/worker:
      - [API break] 'setAutomaticallyInstalledFlag': removed as obsolete.
    - system/resolvers/native:
      - Removed the version normalized score calculation skew.
      - Implemented automatic quality adjustment.
  * doc:
    - cmakelists:
      - Added rules building man pages from PODs.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 11 May 2014 21:26:32 +0300

cupt (2.8.1) unstable; urgency=medium

  * lib,console:
    - Used more explicit syntax for initialization of some STL structures.
      Fixes builds with g++-4.9. (Closes: #746840)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 11 May 2014 16:33:18 +0300

cupt (2.8.0) experimental; urgency=low

  * lib:
    - system/resolvers/native:
      - 'upgrade': re-implemented in terms of 'satisfyRelationExpression'.
    - cache:
      - 'getSatisfyingVersions': minimal single-arch support for ':any'
        suffixes.
    - cache/relation:
      - Constructor: reject package names starting with an allowed symbol.
    - 'consumePackageName': allow ':' character.
  * test:
    - Introduced.
  * debian:
    - libcupt3-0.shlibs: bumped to 2.8.0~.
    - control: modified short and long descriptions to stress flexibility.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 02 May 2014 18:31:24 +0300

cupt (2.7.3) unstable; urgency=low

  * lib:
    - system/resolvers/native:
      - Fixed failing to satisfy 'remove x --no-remove'-kinds of requests.
        This regression was introduced in 2.6.0.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 18 Apr 2014 17:41:29 +0300

cupt (2.7.2) unstable; urgency=low

  * lib:
    - system/resolvers/native:
      - Branch filtering heuristics: fixed skipping sticked but satisfying
        elements. This could lead to skipping some valid solutions.
        This regression was introduced in 2.7.0.
